👋 add part 2 of the assessment to readme

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,13 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
-OPENWEATHER_KEY=c73d63203e2d81f253abc78095a1467f
+DB_CONNECTION=mysql
+DB_DATABASE=bizmates-travel
+DB_USERNAME=root
+DB_PASSWORD=
 
-FOURSQUARE_KEY=ILEXFIOPFQWSOKEVGBMWDG5WJHTYDWU3KMECSR1LV1MNDYSP
-FOURSQUARE_SECRET=XY0FBSG12JI351CV3J1ZJCFKZPKEFDR3CLLEDZKDV42WBHZ0
+OPENWEATHER_KEY=
+
+FOURSQUARE_KEY=
+FOURSQUARE_SECRET=
 FOURSQUARE_VERSION=20211101
